{
  "version": 4,
  "terraform_version": "0.12.5",
  "serial": 82,
  "lineage": "bd9b2e4f-4b64-f74a-b770-fb1bcda33a01",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-036cad13c37e7576c",
            "domain": "vpc",
            "id": "eipalloc-0676afc8652baafeb",
            "network_interface": "eni-0775a78fd7911af2d",
            "private_dns": "ip-123-146-1-83.ec2.internal",
            "private_ip": "123.146.1.83",
            "public_dns": "ec2-52-201-151-234.compute-1.amazonaws.com",
            "public_ip": "52.201.151.234",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035b3c7efe6d061d5",
            "arn": "arn:aws:ec2:us-east-1:638436220413:instance/i-06c2398bf7b5155c3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-06c2398bf7b5155c3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "suresh",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f479707a78c3f1d1",
            "private_dns": "ip-123-146-3-66.ec2.internal",
            "private_ip": "123.146.3.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-097c8072cd3e08385",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0572525f6e0845474",
            "tags": {
              "Name": "Private_Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0231287016a27d460"
            ]
          },
          "depends_on": [
            "aws_key_pair.key_pair",
            "aws_security_group.security",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035b3c7efe6d061d5",
            "arn": "arn:aws:ec2:us-east-1:638436220413:instance/i-0ce3c477b2406f52f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ce3c477b2406f52f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "suresh",
            "monitoring": false,
            "primary_network_interface_id": "eni-04caffc74fd5c414d",
            "private_dns": "ip-123-146-0-38.ec2.internal",
            "private_ip": "123.146.0.38",
            "public_ip": "3.226.253.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0b724ef6b1e40b9c2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd3cf87f5a42713b",
            "tags": {
              "Name": "Public_Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0231287016a27d460"
            ]
          },
          "depends_on": [
            "aws_key_pair.key_pair",
            "aws_security_group.security",
            "aws_subnet.pubic_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-045c87e36d65e4031",
            "owner_id": "638436220413",
            "tags": {
              "Name": "CITY_IGW"
            },
            "vpc_id": "vpc-089a10dd642b88924"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0676afc8652baafeb",
            "id": "nat-06af0fe2f45b09136",
            "network_interface_id": "eni-0775a78fd7911af2d",
            "private_ip": "123.146.1.83",
            "public_ip": "52.201.151.234",
            "subnet_id": "subnet-061819ebd4b8658d9"
          },
          "depends_on": [
            "aws_eip.eip",
            "aws_subnet.pubic_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09df094deb8f86838",
            "owner_id": "638436220413",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-06af0fe2f45b09136",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CITY_PRIVATE_RT"
            },
            "vpc_id": "vpc-089a10dd642b88924"
          },
          "depends_on": [
            "aws_nat_gateway.nat",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0689b2806739d3035",
            "owner_id": "638436220413",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-045c87e36d65e4031",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CITY_PUBLIC_RT"
            },
            "vpc_id": "vpc-089a10dd642b88924"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7d4686629894c46",
            "route_table_id": "rtb-09df094deb8f86838",
            "subnet_id": "subnet-0619579a281a1eb58"
          },
          "depends_on": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa5026bc9e162ac5",
            "route_table_id": "rtb-09df094deb8f86838",
            "subnet_id": "subnet-0572525f6e0845474"
          },
          "depends_on": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02065240d1e22af30",
            "route_table_id": "rtb-0689b2806739d3035",
            "subnet_id": "subnet-0dd3cf87f5a42713b"
          },
          "depends_on": [
            "aws_route_table.public_rt",
            "aws_subnet.pubic_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e368d7ce691fa062",
            "route_table_id": "rtb-0689b2806739d3035",
            "subnet_id": "subnet-061819ebd4b8658d9"
          },
          "depends_on": [
            "aws_route_table.public_rt",
            "aws_subnet.pubic_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:638436220413:security-group/sg-0231287016a27d460",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0231287016a27d460",
            "ingress": [
              {
                "cidr_blocks": [
                  "122.171.63.216/32",
                  "123.146.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": null,
            "owner_id": "638436220413",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-089a10dd642b88924"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:638436220413:subnet/subnet-0619579a281a1eb58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "123.146.2.0/25",
            "id": "subnet-0619579a281a1eb58",
            "map_public_ip_on_launch": false,
            "owner_id": "638436220413",
            "tags": {
              "Name": "Private_subnets-1"
            },
            "vpc_id": "vpc-089a10dd642b88924"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:638436220413:subnet/subnet-0572525f6e0845474",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "123.146.3.0/25",
            "id": "subnet-0572525f6e0845474",
            "map_public_ip_on_launch": false,
            "owner_id": "638436220413",
            "tags": {
              "Name": "Private_subnets-2"
            },
            "vpc_id": "vpc-089a10dd642b88924"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubic_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:638436220413:subnet/subnet-0dd3cf87f5a42713b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "123.146.0.0/25",
            "id": "subnet-0dd3cf87f5a42713b",
            "map_public_ip_on_launch": false,
            "owner_id": "638436220413",
            "tags": {
              "Name": "Public_subnets-1"
            },
            "vpc_id": "vpc-089a10dd642b88924"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:638436220413:subnet/subnet-061819ebd4b8658d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "123.146.1.0/25",
            "id": "subnet-061819ebd4b8658d9",
            "map_public_ip_on_launch": false,
            "owner_id": "638436220413",
            "tags": {
              "Name": "Public_subnets-2"
            },
            "vpc_id": "vpc-089a10dd642b88924"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:638436220413:vpc/vpc-089a10dd642b88924",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "123.146.0.0/16",
            "default_network_acl_id": "acl-031a28efbf5272341",
            "default_route_table_id": "rtb-03346a3d1f452fc99",
            "default_security_group_id": "sg-099d2e6b74e5b62b3",
            "dhcp_options_id": "dopt-44e5b73f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-089a10dd642b88924",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03346a3d1f452fc99",
            "owner_id": "638436220413",
            "tags": {
              "Name": "CITY_VPC"
            }
          }
        }
      ]
    }
  ]
}